# kingsbot

./: README.md  bot.py  setup.cfg
.github/workflows/: deploy.yml
leetcodebot/: aoc.py  consts.py  contest.py  main.py  rank.py  status.py  today.py
