[metadata]
name = leetcodebot
version = 1.0.0
author = Pigowl
author_email = fomin.dm@gmail.com
description = Leetcode statistics bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dfomin/kingsbot
project_urls =
    Bug Tracker = https://github.com/dfomin/kingsbot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = leetcodebot
packages = find:
python_requires = >=3.12

[options.packages.find]
where = leetcodebot
